--- a/O365TaskRollupApp/O365TaskRollupApp.csproj
+++ b/O365TaskRollupApp/O365TaskRollupApp.csproj
@@ -43,18 +43,24 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="package.json" />
     <None Include="packages.config" />
     <None Include="Pages\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{0cc5ef41-886a-4f42-8b66-80a1b31c06b2}</SharePointProjectItemId>
     </None>
+    <Content Include="Elements.xml" />
     <Content Include="Pages\Elements.xml" />
     <Content Include="Pages\Default.aspx" />
+    <None Include="SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{7054761c-6327-4174-9497-cc0705fb7b10}</SharePointProjectItemId>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Scripts\jquery-1.9.1.min.map" />
     <None Include="Scripts\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{177c346a-58ea-4697-9da5-13386b68f9d2}</SharePointProjectItemId>
     </None>
+    <Content Include="readme.txt" />
     <Content Include="Scripts\Elements.xml" />
     <Content Include="Scripts\App.js" />
     <Content Include="Scripts\jquery-1.9.1.intellisense.js" />
