--- a/O365TaskRollupApp/package.json
+++ b/O365TaskRollupApp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "o365-task-rollup",
   "version": "1.0.0",
-  "description": "Here are the commands used to set up package.json for NPM. Do these from Node.js command prompt inside the project (not solution). You need to create package.json from the command line first using \r npm init.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,11 +16,43 @@
     "url": "https://github.com/leeroy79/O365TaskRollup/issues"
   },
   "homepage": "https://github.com/leeroy79/O365TaskRollup#readme",
-  "devDependencies": {
-    "concurrently": "^3.1.0"
-  },
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/core": "^2.3.1"
+    "@angular/common": "~2.3.0",
+    "@angular/compiler": "~2.3.0",
+    "@angular/core": "~2.3.0",
+    "@angular/forms": "~2.3.0",
+    "@angular/http": "~2.3.0",
+    "@angular/platform-browser": "~2.3.0",
+    "@angular/platform-browser-dynamic": "~2.3.0",
+    "@angular/router": "~3.3.0",
+
+    "angular-in-memory-web-api": "~0.2.1",
+    "systemjs": "0.19.40",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-rc.4",
+    "zone.js": "^0.7.2"
+  },
+  "devDependencies": {
+    "concurrently": "^3.1.0",
+    "lite-server": "^2.2.2",
+    "typescript": "~2.0.10",
+
+    "canonical-path": "0.0.2",
+    "http-server": "^0.9.0",
+    "tslint": "^3.15.1",
+    "lodash": "^4.16.4",
+    "jasmine-core": "~2.4.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~4.0.13",
+    "rimraf": "^2.5.4",
+
+    "@types/node": "^6.0.46",
+    "@types/jasmine": "^2.5.36",
+    "@types/selenium-webdriver": "^2.53.33"
   }
 }
