Fiddled with the Angular stuff a bit but still not working. Giving up for now. Next step : it can't find the HTML template, and various things in the polyfill are throwing errors.

--- a/O365TaskRollupApp/O365TaskRollupApp.csproj
+++ b/O365TaskRollupApp/O365TaskRollupApp.csproj
@@ -43,6 +43,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="app\app.component.html" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\polyfills.js" />
     <Content Include="Scripts\vendor.js" />
