--- a/O365TaskRollupApp/package.json
+++ b/O365TaskRollupApp/package.json
@@ -36,10 +36,13 @@
     "@types/jasmine": "^2.5.36",
     "@types/node": "^6.0.46",
     "@types/selenium-webdriver": "^2.53.33",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^3.0.0-beta.17",
     "canonical-path": "0.0.2",
     "concurrently": "^3.1.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
+    "html-webpack-plugin": "^2.24.1",
     "http-server": "^0.9.0",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
