--- a/O365TaskRollupApp/package.json
+++ b/O365TaskRollupApp/package.json
@@ -40,8 +40,11 @@
     "awesome-typescript-loader": "^3.0.0-beta.17",
     "canonical-path": "0.0.2",
     "concurrently": "^3.1.0",
+    "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "http-server": "^0.9.0",
     "jasmine-core": "~2.4.1",
@@ -50,10 +53,14 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
+    "null-loader": "^0.1.1",
     "protractor": "~4.0.13",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
     "tslint": "^3.15.1",
     "typescript": "~2.0.10",
     "webpack": "^1.14.0",
