--- a/O365TaskRollupApp/O365TaskRollupApp.csproj
+++ b/O365TaskRollupApp/O365TaskRollupApp.csproj
@@ -59,11 +59,9 @@
     <Content Include="gulpfile.js" />
     <Content Include="Pages\Elements.xml" />
     <Content Include="Pages\Default.aspx" />
-    <None Include="Scripts\app.component.js.map" />
     <None Include="Scripts\app.js.map" />
-    <None Include="Scripts\app.module.js.map" />
-    <None Include="Scripts\boot.js.map" />
     <None Include="Scripts\polyfills.js.map" />
+    <None Include="Scripts\readme.md" />
     <None Include="Scripts\vendor.js.map" />
     <None Include="SharePointProjectItem.spdata">
       <SharePointProjectItemId>{7054761c-6327-4174-9497-cc0705fb7b10}</SharePointProjectItemId>
@@ -74,12 +72,7 @@
     <None Include="Scripts\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{177c346a-58ea-4697-9da5-13386b68f9d2}</SharePointProjectItemId>
     </None>
-    <Content Include="Scripts\app.component.js" />
-    <Content Include="Scripts\app.module.js" />
-    <Content Include="Scripts\boot.js" />
     <Content Include="Scripts\Elements.xml" />
-    <Content Include="Scripts\jquery-1.9.1.intellisense.js" />
-    <Content Include="Scripts\_references.js" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\SharePointProjectItem.spdata">
