--- a/O365TaskRollupApp/O365TaskRollupApp.csproj
+++ b/O365TaskRollupApp/O365TaskRollupApp.csproj
@@ -49,13 +49,13 @@
     <Content Include="Scripts\vendor.js" />
     <Content Include="webpack\webpack.common.js" />
     <Content Include="webpack.config.js" />
+    <None Include="app\readme.md" />
     <None Include="package.json" />
     <None Include="Pages\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{0cc5ef41-886a-4f42-8b66-80a1b31c06b2}</SharePointProjectItemId>
     </None>
     <Content Include="webpack\webpack.dev.js" />
     <Content Include="webpack\webpackHelper.js" />
-    <Content Include="Elements.xml" />
     <Content Include="gulpfile.js" />
     <Content Include="Pages\Elements.xml" />
     <Content Include="Pages\Default.aspx" />
