--- a/O365TaskRollupApp/package.json
+++ b/O365TaskRollupApp/package.json
@@ -44,6 +44,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
+    "gulp-replace": "^0.5.4",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "http-server": "^0.9.0",
