Removed tsc from pre-build step. Webpack handles the compilation now.

--- a/O365TaskRollupApp/O365TaskRollupApp.csproj
+++ b/O365TaskRollupApp/O365TaskRollupApp.csproj
@@ -124,6 +124,7 @@
   </PropertyGroup>
   <Import Project="$(VSToolsPath)\SharePointTools\Microsoft.VisualStudio.SharePoint.targets" Condition="'$(VSToolsPath)' != ''" />
   <PropertyGroup>
-    <PreBuildEvent>tsc</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
